--- a/hada-p1/hada-p1.csproj
+++ b/hada-p1/hada-p1.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{CFE3EF49-41B8-4637-9A59-76FC44974573}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>hada_p1</RootNamespace>
-    <AssemblyName>hada_p1</AssemblyName>
+    <AssemblyName>hada-p1</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HadaP1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="readme.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
